oxygen-kubernetes/oxygen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oxygen-service
spec:
  selector:
    app: log680-oxygen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
